--- a/index.html
+++ b/index.html
@@ -8,15 +8,12 @@
   <title>Exercici 1</title>
   <link rel="shortcut icon" href="assets/favicon-32x32.png" type="image/x-icon">
   <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/custom.css">
   <script defer src="js/bootstrap.min.js"></script>
-  <style>
 
-  </style>
 </head>
 
 <body>
-  <div class="container">
+  <div class="container  fixed-top">
     <nav class="navbar navbar-expand-lg navbar-light bg-white text-uppercase fw-bold letter">
       <div class="container-fluid">
         <!-- logo bookmark -->
@@ -51,6 +48,8 @@
     </nav>
   </div>
 
+
+<!-- <div style="height: 1700px; background-color: wheat"></div> -->
 </body>
 
 </html>
