--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Exercici 1</title>
   <link rel="shortcut icon" href="assets/favicon-32x32.png" type="image/x-icon">
-  <link rel="stylesheet" href="css/main.css">
-  <script defer src="js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="assets/css/main.css">
+  <script defer src="assets/js/bootstrap.min.js"></script>
 
 </head>
 
@@ -63,7 +63,7 @@
       </div>
       <div class="position-relative  order-0 order-sm-1 col border border-alerta overflow-query">
         <img class="img-fluid"  src="assets/img/illustration-hero.svg" alt="image" />
-        <div class=" position-absolute top-50 start-50 bg-primary bg-figure"></div>
+        <div class="position-absolute top-50 start-50 bg-primary bg-figure"></div>
       </div>
     </div>
   </div>
