--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <a class="btn btn-light-2 btn-sm text-muted rounded-3 shadow fw-bolder  py-3 px-4" href="#">Get it on Firefox</a>
 
       </div>
-      <div class="position-relative  order-0 order-sm-1 col border border-alerta overflow-query">
+      <div class="position-relative  order-0 order-sm-1 col overflow-query">
         <img class="img-fluid"  src="assets/img/illustration-hero.svg" alt="image" />
         <div class="position-absolute top-50 start-50 bg-primary bg-figure"></div>
       </div>
