tab basic funcionality

--- a/index.html
+++ b/index.html
@@ -67,6 +67,45 @@
       </div>
     </div>
   </div>
+
+  <!-- FEATURES -->>
+  <div class="container">
+    <div class="row mb-4">
+      <div class="col text-center">
+        <h1>Features</h1>
+        <p class="text-muted">
+          Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access them on the go.
+        </p>
+      </div>
+    </div>
+    <div class="row">
+      <!-- component tabs -->
+      <div class="col text-center">
+        <ul class="nav nav-tabs" role="tablist" id="tabFeatures">
+          <li class="nav-item" role="presentation">
+            <button class="nav-link active" id="Simple-Bookmarking" data-bs-toggle="tab" data-bs-target="#SimpleBookmarking" type="button" role="tab" aria-controls="SimpleBookmarking" aria-selected="true">Simple Bookmarking</button>
+          </li>
+          <li class="nav-item" role="presentation">
+            <button class="nav-link" id="Speedy-Searching" data-bs-toggle="tab" data-bs-target="#SpeedySearching" type="button" role="tab" aria-controls="SpeedySearching" aria-selected="false">Speedy Searching</button>
+          </li>
+          <li class="nav-item" role="presentation">
+            <button class="nav-link" id="Easy-Sharing" data-bs-toggle="tab" data-bs-target="#EasySharing" type="button" role="tab" aria-controls="EasySharing" aria-selected="false">Easy Sharing</button>
+          </li>
+        </ul>
+        <div class="tab-content" id="myTabContent">
+          <div class="tab-pane fade show active" id="SimpleBookmarking" role="tabpanel" aria-labelledby="Simple-Bookmarking">tex 1</div>
+          <div class="tab-pane fade" id="SpeedySearching" role="tabpanel" aria-labelledby="Speedy-Searching"> text 2</div>
+          <div class="tab-pane fade" id="EasySharing" role="tabpanel" aria-labelledby="Easy-Sharing"> text 3</div>
+        </div>
+      </div>
+    </div>
+
+
+  </div>
+
+
+
+
   <!-- <div style="height: 1700px; background-color: wheat"></div> -->
 </body>
 
