--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Exercici 1</title>
   <link rel="shortcut icon" href="assets/favicon-32x32.png" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/main.css">
   <script defer src="assets/js/bootstrap.min.js"></script>
 
@@ -81,9 +84,10 @@
     <div class="row">
       <!-- component tabs -->
       <div class="col text-center">
-        <ul class="nav nav-tabs" role="tablist" id="tabFeatures">
-          <li class="nav-item" role="presentation">
+        <ul class="nav nav-tabs d-flex justify-content-center" role="tablist" id="tabFeatures">
+          <li class="nav-item " role="presentation">
             <button class="nav-link active" id="Simple-Bookmarking" data-bs-toggle="tab" data-bs-target="#SimpleBookmarking" type="button" role="tab" aria-controls="SimpleBookmarking" aria-selected="true">Simple Bookmarking</button>
+
           </li>
           <li class="nav-item" role="presentation">
             <button class="nav-link" id="Speedy-Searching" data-bs-toggle="tab" data-bs-target="#SpeedySearching" type="button" role="tab" aria-controls="SpeedySearching" aria-selected="false">Speedy Searching</button>
@@ -93,7 +97,7 @@
           </li>
         </ul>
         <div class="tab-content" id="myTabContent">
-          <div class="tab-pane fade show active" id="SimpleBookmarking" role="tabpanel" aria-labelledby="Simple-Bookmarking">tex 1</div>
+          <div class="tab-pane fade show active" id="SimpleBookmarking" role="tabpanel" aria-labelledby="Simple-Bookmarking">tex 1 </div>
           <div class="tab-pane fade" id="SpeedySearching" role="tabpanel" aria-labelledby="Speedy-Searching"> text 2</div>
           <div class="tab-pane fade" id="EasySharing" role="tabpanel" aria-labelledby="Easy-Sharing"> text 3</div>
         </div>
