Sprint 2: Exercici 2 Features

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <a class="btn btn-light-2 btn-sm text-muted rounded-3 shadow fw-bolder  py-3 px-4" href="#">Get it on Firefox</a>
 
       </div>
-      <div class="position-relative  order-0 order-sm-1 col overflow-query">
+      <div class="position-relative  order-0 order-sm-1 col overflow-figurate">
         <img class="img-fluid"  src="assets/img/illustration-hero.svg" alt="image" />
         <div class="position-absolute top-50 start-50 bg-primary bg-figure"></div>
       </div>
@@ -81,8 +81,10 @@
         </p>
       </div>
     </div>
+
+
+  <!-- component tabs -->
     <div class="row">
-      <!-- component tabs -->
       <div class="col text-center">
         <ul class="nav nav-tabs d-flex justify-content-center" role="tablist" id="tabFeatures">
           <li class="nav-item " role="presentation">
@@ -97,7 +99,24 @@
           </li>
         </ul>
         <div class="tab-content" id="myTabContent">
-          <div class="tab-pane fade show active" id="SimpleBookmarking" role="tabpanel" aria-labelledby="Simple-Bookmarking">tex 1 </div>
+          <div class="tab-pane fade show active" id="SimpleBookmarking" role="tabpanel" aria-labelledby="Simple-Bookmarking">
+            <div class="col col-md-6">
+
+            </div>
+            <div class="container row mt-5">
+              <div class="col col-md-6">
+                <div class="position-relative col overflow-figure-1">
+                  <img class="img-fluid"  src="assets/img/illustration-features-tab-1.svg" alt="image" />
+                  <div class="bg-figure-componet-tab"></div>
+                </div>
+              </div>
+              <div class="col col-md-6">
+                <h2>Bookmark in one click</h2>
+                <p class="text-muted">Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.</p>
+                <button type="button" class="btn btn-primary btn-sm py-2 px-4">More info</button>
+              </div>
+            </div>
+          </div>
           <div class="tab-pane fade" id="SpeedySearching" role="tabpanel" aria-labelledby="Speedy-Searching"> text 2</div>
           <div class="tab-pane fade" id="EasySharing" role="tabpanel" aria-labelledby="Easy-Sharing"> text 3</div>
         </div>
