exercici-2 reposive componet tab fixed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-
+  <!-- navbar -->
   <div class="container sticky-top">
     <nav class="navbar navbar-expand-lg navbar-light bg-white text-uppercase fw-bold letter">
       <div class="container-fluid">
@@ -51,21 +51,23 @@
       </div>
     </nav>
   </div>
-
-  <div class="container mt-5">
-
+  <!-- Bookmark -->
+  <div class="container">
     <div class="row">
       <div class="order-1 order-sm-0 col-12 col-md-6 col-lg-6">
         <h1 class="text-center text-md-start fw-bolder">A Simple Bookmark Manager</h1>
-        <p class="text-muted">A clean and simple interface to organize your favourite websites. Open a new broser tab and see your sites
+        <p class="text-muted">A clean and simple interface to organize your favourite websites. Open a new broser tab
+          and see your sites
           load instantly. Try it for free.</p>
 
-          <a class="btn btn-primary btn-sm text-white rounded-3  fw-bolder me-2 my-2 py-3 px-4" href="#">Get it on Chrome</a>
-          <a class="btn btn-light-2 btn-sm text-muted rounded-3 shadow fw-bolder  py-3 px-4" href="#">Get it on Firefox</a>
+        <a class="btn btn-primary btn-sm text-white rounded-3  fw-bolder me-2 my-2 py-3 px-4" href="#">Get it on
+          Chrome</a>
+        <a class="btn btn-light-2 btn-sm text-muted rounded-3 shadow fw-bolder  py-3 px-4" href="#">Get it on
+          Firefox</a>
 
       </div>
       <div class="position-relative  order-0 order-sm-1 col overflow-figurate">
-        <img class="img-fluid"  src="assets/img/illustration-hero.svg" alt="image" />
+        <img class="img-fluid" src="assets/img/illustration-hero.svg" alt="image" />
         <div class="position-absolute top-50 start-50 bg-primary bg-figure"></div>
       </div>
     </div>
@@ -77,47 +79,55 @@
       <div class="col text-center">
         <h1>Features</h1>
         <p class="text-muted">
-          Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access them on the go.
+          Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync between
+          your devices so you can access them on the go.
         </p>
       </div>
     </div>
 
 
-  <!-- component tabs -->
+    <!-- component tabs -->
     <div class="row">
       <div class="col text-center">
         <ul class="nav nav-tabs d-flex justify-content-center" role="tablist" id="tabFeatures">
           <li class="nav-item " role="presentation">
-            <button class="nav-link active" id="Simple-Bookmarking" data-bs-toggle="tab" data-bs-target="#SimpleBookmarking" type="button" role="tab" aria-controls="SimpleBookmarking" aria-selected="true">Simple Bookmarking</button>
+            <button class="nav-link active" id="Simple-Bookmarking" data-bs-toggle="tab"
+              data-bs-target="#SimpleBookmarking" type="button" role="tab" aria-controls="SimpleBookmarking"
+              aria-selected="true">Simple Bookmarking</button>
 
           </li>
           <li class="nav-item" role="presentation">
-            <button class="nav-link" id="Speedy-Searching" data-bs-toggle="tab" data-bs-target="#SpeedySearching" type="button" role="tab" aria-controls="SpeedySearching" aria-selected="false">Speedy Searching</button>
+            <button class="nav-link" id="Speedy-Searching" data-bs-toggle="tab" data-bs-target="#SpeedySearching"
+              type="button" role="tab" aria-controls="SpeedySearching" aria-selected="false">Speedy Searching</button>
           </li>
           <li class="nav-item" role="presentation">
-            <button class="nav-link" id="Easy-Sharing" data-bs-toggle="tab" data-bs-target="#EasySharing" type="button" role="tab" aria-controls="EasySharing" aria-selected="false">Easy Sharing</button>
+            <button class="nav-link" id="Easy-Sharing" data-bs-toggle="tab" data-bs-target="#EasySharing" type="button"
+              role="tab" aria-controls="EasySharing" aria-selected="false">Easy Sharing</button>
           </li>
         </ul>
         <div class="tab-content" id="myTabContent">
-          <div class="tab-pane fade show active" id="SimpleBookmarking" role="tabpanel" aria-labelledby="Simple-Bookmarking">
+          <div class="tab-pane fade show active" id="SimpleBookmarking" role="tabpanel"
+            aria-labelledby="Simple-Bookmarking">
             <div class="col col-md-6">
 
             </div>
             <div class="container row mt-5">
-              <div class="col col-md-6">
+              <div class="col-sm col-md-6">
                 <div class="position-relative col overflow-figure-1">
-                  <img class="img-fluid"  src="assets/img/illustration-features-tab-1.svg" alt="image" />
+                  <img class="img-fluid" src="assets/img/illustration-features-tab-1.svg" alt="image" />
                   <div class="bg-figure-componet-tab"></div>
                 </div>
               </div>
-              <div class="col col-md-6">
+              <div class="col-sm col-md-6">
                 <h2>Bookmark in one click</h2>
-                <p class="text-muted">Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.</p>
+                <p class="text-muted">Organize your bookmarks however you like. Our simple drag-and-drop interface gives
+                  you complete control over how you manage your favourite sites.</p>
                 <button type="button" class="btn btn-primary btn-sm py-2 px-4">More info</button>
               </div>
             </div>
           </div>
-          <div class="tab-pane fade" id="SpeedySearching" role="tabpanel" aria-labelledby="Speedy-Searching"> text 2</div>
+          <div class="tab-pane fade" id="SpeedySearching" role="tabpanel" aria-labelledby="Speedy-Searching"> text 2
+          </div>
           <div class="tab-pane fade" id="EasySharing" role="tabpanel" aria-labelledby="Easy-Sharing"> text 3</div>
         </div>
       </div>
@@ -125,7 +135,38 @@
 
 
   </div>
+  <!-- SPACER -->
+  <div class="spacer"></div>
 
+  <!-- CARDS -->
+  <div class="container mb-4">
+    <div class="card-group">
+      <div class="card">
+        <img src="assets/img/logo-chrome.svg" class="card-img" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+
+          <p class="card-text"><small class="text-muted">Minimum version 62</small></p>
+          <a class="btn btn-primary btn-sm text-white rounded-3  fw-bolder me-2 my-2 py-3 px-4" href="#">Add & Install Extention</a>
+        </div>
+      </div>
+      <div class="card">
+        <img src="assets/img/logo-firefox.svg" class="card-img" alt="...">
+        <div class=" card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text"><small class="text-muted">Minimum version 55</small></p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="assets/img/logo-opera.svg" class="card-img" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+
+          <p class="card-text"><small class="text-muted">Minimum version 46</small></p>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 
