--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@
         <div class=" card-body">
           <h5 class="card-title">Card title</h5>
           <p class="card-text"><small class="text-muted">Minimum version 55</small></p>
+          <a class="btn btn-primary btn-sm text-white rounded-3  fw-bolder me-2 my-2 py-3 px-4" href="#">Add & Install Extention</a>
+
         </div>
       </div>
       <div class="card">
@@ -163,6 +165,8 @@
           <h5 class="card-title">Card title</h5>
 
           <p class="card-text"><small class="text-muted">Minimum version 46</small></p>
+          <a class="btn btn-primary btn-sm text-white rounded-3  fw-bolder me-2 my-2 py-3 px-4" href="#">Add & Install Extention</a>
+
         </div>
       </div>
     </div>
