--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div>
   </div>
 
-  <!-- FEATURES -->>
+  <!-- FEATURES -->
   <div class="container">
     <div class="row mb-4">
       <div class="col text-center">
@@ -84,8 +84,6 @@
         </p>
       </div>
     </div>
-
-
     <!-- component tabs -->
     <div class="row">
       <div class="col text-center">
@@ -118,11 +116,14 @@
                   <div class="bg-figure-componet-tab"></div>
                 </div>
               </div>
-              <div class="col-sm col-md-6">
-                <h2>Bookmark in one click</h2>
-                <p class="text-muted">Organize your bookmarks however you like. Our simple drag-and-drop interface gives
-                  you complete control over how you manage your favourite sites.</p>
-                <button type="button" class="btn btn-primary btn-sm py-2 px-4">More info</button>
+              <div class="col-sm col-md-6 text-start">
+                <div class="marginleft">
+                  <h2>Bookmark in one click</h2>
+                  <p class=" text-silver">Organize your bookmarks however you like. Our simple drag-and-drop interface
+                    gives
+                    you complete control over how you manage your favourite sites.</p>
+                  <button type="button" class="btn btn-primary btn-sm py-2 px-4">More info</button>
+                </div>
               </div>
             </div>
           </div>
@@ -140,39 +141,113 @@
 
   <!-- CARDS -->
   <div class="container mb-4">
+    <h2 class="text-center">Download the extension</h2>
+    <p class="text-center text-silver px-5">
+      We've got more browser in th pipeline. Plesase do let us know if you've got a favourite you'd like us to
+      prioritize.
+    </p>
     <div class="card-group">
       <div class="card">
         <img src="assets/img/logo-chrome.svg" class="card-img" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">Add to Chrome</h5>
 
-          <p class="card-text"><small class="text-muted">Minimum version 62</small></p>
-          <a class="btn btn-primary btn-sm text-white rounded-3  fw-bolder me-2 my-2 py-3 px-4" href="#">Add & Install Extention</a>
+          <p class="card-text"><small class="text-silver">Minimum version 62</small></p>
+          <a class="btn btn-primary btn-sm text-white rounded-3  fw-bolder me-2 my-2 py-3 px-4" href="#">Add & Install
+            Extention</a>
         </div>
       </div>
       <div class="card">
         <img src="assets/img/logo-firefox.svg" class="card-img" alt="...">
         <div class=" card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text"><small class="text-muted">Minimum version 55</small></p>
-          <a class="btn btn-primary btn-sm text-white rounded-3  fw-bolder me-2 my-2 py-3 px-4" href="#">Add & Install Extention</a>
+          <h5 class="card-title">Add to Firefox</h5>
+          <p class="card-text"><small class="text-silver">Minimum version 55</small></p>
+          <a class="btn btn-primary btn-sm text-white rounded-3  fw-bolder me-2 my-2 py-3 px-4" href="#">Add & Install
+            Extention</a>
 
         </div>
       </div>
       <div class="card">
         <img src="assets/img/logo-opera.svg" class="card-img" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">Add to Opera</h5>
 
-          <p class="card-text"><small class="text-muted">Minimum version 46</small></p>
-          <a class="btn btn-primary btn-sm text-white rounded-3  fw-bolder me-2 my-2 py-3 px-4" href="#">Add & Install Extention</a>
+          <p class="card-text"><small class="text-silver">Minimum version 46</small></p>
+          <a class="btn btn-primary btn-sm text-white rounded-3  fw-bolder me-2 my-2 py-3 px-4" href="#">Add & Install
+            Extention</a>
 
         </div>
       </div>
     </div>
   </div>
+  <!-- SPACER -->
+  <div class="spacer"></div>
 
-
+  <!-- FAQS -->
+  <div class="container">
+    <h2 class="text-center fw-bold">Frenquently Asked Questions</h2>
+    <p class="text-center text-muted">Here are some of you FAQs. If you have any questions you'd like to anseared please
+      feel free to email us.</p>
+    <div class="accordion" id="accordionPanelsStayOpenExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse"
+            data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+            aria-controls="panelsStayOpen-collapseOne">
+            Accordion Item #1
+          </button>
+        </h2>
+        <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
+          aria-labelledby="panelsStayOpen-headingOne">
+          <div class="accordion-body">
+            <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin
+            adds the appropriate classes that we use to style each element. These classes control the overall
+            appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom
+            CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the
+            <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+            aria-controls="panelsStayOpen-collapseTwo">
+            Accordion Item #2
+          </button>
+        </h2>
+        <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
+          aria-labelledby="panelsStayOpen-headingTwo">
+          <div class="accordion-body">
+            <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse
+            plugin adds the appropriate classes that we use to style each element. These classes control the overall
+            appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom
+            CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the
+            <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
+            aria-controls="panelsStayOpen-collapseThree">
+            Accordion Item #3
+          </button>
+        </h2>
+        <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
+          aria-labelledby="panelsStayOpen-headingThree">
+          <div class="accordion-body">
+            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin
+            adds the appropriate classes that we use to style each element. These classes control the overall
+            appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom
+            CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the
+            <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- <div style="height: 1700px; background-color: wheat"></div> -->
 </body>
