--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
   <div class="spacer"></div>
 
   <!-- FAQS -->
-  <div class="container">
+  <div class="container margin-faq">
     <h2 class="text-center fw-bold">Frenquently Asked Questions</h2>
     <p class="text-center text-muted">Here are some of you FAQs. If you have any questions you'd like to anseared please
       feel free to email us.</p>
