--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
   <!-- SPACER -->
   <div class="spacer"></div>
 
+
   <!-- FAQS -->
   <div class="container margin-faq">
     <h2 class="text-center fw-bold">Frenquently Asked Questions</h2>
@@ -194,7 +195,7 @@
           <button class="accordion-button" type="button" data-bs-toggle="collapse"
             data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
             aria-controls="panelsStayOpen-collapseOne">
-            Accordion Item #1
+            What is Bookmark
           </button>
         </h2>
         <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
@@ -213,7 +214,7 @@
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
             data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
             aria-controls="panelsStayOpen-collapseTwo">
-            Accordion Item #2
+            How can I request a new browser
           </button>
         </h2>
         <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
@@ -232,8 +233,7 @@
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
             data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
             aria-controls="panelsStayOpen-collapseThree">
-            Accordion Item #3
-          </button>
+            Is there a mobile app
         </h2>
         <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
           aria-labelledby="panelsStayOpen-headingThree">
@@ -246,8 +246,33 @@
           </div>
         </div>
       </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="panelsStayOpen-headingFour">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false"
+            aria-controls="panelsStayOpen-collapseFour">
+            What about other Chromium browser
+        </h2>
+        <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse"
+          aria-labelledby="panelsStayOpen-headingFour">
+          <div class="accordion-body">
+            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin
+            adds the appropriate classes that we use to style each element. These classes control the overall
+            appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom
+            CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the
+            <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
+        </div>
+      </div>
+      <div class="text-center mt-5"><button type="button" class="btn btn-primary btn-sm py-2 px-4">More info</button></div>
+
     </div>
   </div>
+
+
+
+
+
 
   <!-- <div style="height: 1700px; background-color: wheat"></div> -->
 </body>
